--- a/app/src/main/res/menu/statement_popup_menu.xml
+++ b/app/src/main/res/menu/statement_popup_menu.xml
@@ -8,5 +8,5 @@
         android:title="Delete" />
     <item
         android:id="@+id/mnuShow"
-        android:title="Show" />
+        android:title="Download" />
 </menu>
