statement upload module p-4_t7

--- a/app/src/main/res/layout/layout_loan_list.xml
+++ b/app/src/main/res/layout/layout_loan_list.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -7,51 +8,72 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_margin="@dimen/_4sdp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/_5sdp">
-
+            android:layout_height="match_parent">
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:id="@+id/smBanner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/yellow_button"
+                android:padding="@dimen/_5sdp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="@+id/txtRate"
+                app:layout_constraintTop_toBottomOf="@+id/txtRate"
+                app:layout_constraintVertical_bias="1.0" >
+                <com.app.l_pesa.common.CommonTextRegular
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="$10 Loan approval in 5 sec."
+                    android:rotation="0"
+                    android:textStyle="bold"
+                    android:textColor="#3E0000"
+                    android:id="@+id/tvBanner"/>
+            </com.facebook.shimmer.ShimmerFrameLayout>
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtLoanAmount"
-                android:layout_height="@dimen/_45sdp"
                 android:layout_width="@dimen/_45sdp"
+                android:layout_height="@dimen/_45sdp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:background="@drawable/bg_aquamarine_circle"
+                android:gravity="center"
                 android:textColor="@color/colorWhite"
                 android:textSize="@dimen/_10sdp"
-                android:gravity="center"
-                android:layout_marginTop="@dimen/_7sdp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/txtRequiredScore"
-                />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtRequiredScore"
-                android:layout_height="@dimen/_20sdp"
                 android:layout_width="0dp"
-                android:textSize="@dimen/_12sdp"
-                android:paddingStart="@dimen/_4sdp"
-                android:paddingEnd="@dimen/_2sdp"
-                android:textColor="@color/colorTextBlack"
-                android:maxLines="1"
+                android:layout_height="@dimen/_20sdp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 android:ellipsize="end"
                 android:gravity="start|center"
+                android:maxLines="1"
+                android:paddingStart="@dimen/_4sdp"
+                android:paddingEnd="@dimen/_2sdp"
                 android:text=""
-                app:layout_constraintStart_toEndOf="@+id/txtLoanAmount"
-                app:layout_constraintTop_toTopOf="parent"
+                android:textColor="@color/colorTextBlack"
+                android:textSize="@dimen/_12sdp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/txtDuration"
-                />
+                app:layout_constraintStart_toEndOf="@+id/txtLoanAmount"
+                app:layout_constraintTop_toTopOf="@+id/txtLoanAmount" />
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtDuration"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/_20sdp"
-                android:layout_marginTop="@dimen/_3sdp"
+                android:layout_marginTop="2dp"
                 android:drawableStart="@drawable/ic_request_date"
                 android:drawablePadding="@dimen/_2sdp"
                 android:ellipsize="end"
@@ -62,49 +84,47 @@
                 android:text=""
                 android:textColor="@color/colorTextBlackLight"
                 android:textSize="@dimen/_10sdp"
-                app:layout_constraintEnd_toStartOf="@+id/buttonLoanStatus"
-                app:layout_constraintStart_toEndOf="@+id/txtLoanAmount"
-                app:layout_constraintTop_toBottomOf="@+id/txtRequiredScore"
-                app:layout_constraintBottom_toTopOf="@+id/txtRate"
 
-                />
+                app:layout_constraintEnd_toStartOf="@+id/buttonLoanStatus"
+                app:layout_constraintStart_toStartOf="@+id/txtRequiredScore"
+                app:layout_constraintTop_toTopOf="@+id/buttonLoanStatus" />
 
             <com.app.l_pesa.common.CustomButtonRegular
                 android:id="@+id/buttonLoanStatus"
-                android:layout_height="@dimen/_27sdp"
                 android:layout_width="@dimen/_95sdp"
-                android:textSize="@dimen/_9sdp"
+                android:layout_height="@dimen/_27sdp"
                 android:layout_marginStart="@dimen/_2sdp"
-                android:layout_marginEnd="@dimen/_2sdp"
-                android:textAllCaps="false"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 android:drawablePadding="@dimen/_3sdp"
-                app:layout_constraintTop_toBottomOf="@+id/txtRequiredScore"
-                app:layout_constraintStart_toEndOf="@+id/txtDuration"
+                android:textAllCaps="false"
+                android:textSize="@dimen/_9sdp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/txtDuration"
 
-                />
+                app:layout_constraintTop_toBottomOf="@+id/txtRequiredScore" />
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtRate"
-                android:layout_height="@dimen/_20sdp"
                 android:layout_width="0dp"
-                android:textSize="@dimen/_10sdp"
+                android:layout_height="@dimen/_20sdp"
+                android:layout_marginTop="2dp"
+                android:drawableStart="@drawable/ic_rate_interest_icon"
+                android:drawablePadding="@dimen/_2sdp"
+                android:ellipsize="end"
+                android:gravity="center|start"
+                android:maxLines="1"
                 android:paddingStart="@dimen/_4sdp"
                 android:paddingEnd="@dimen/_2sdp"
-                android:layout_marginTop="@dimen/_1sdp"
-                android:drawablePadding="@dimen/_2sdp"
-                android:textColor="@color/colorTextBlackLight"
-                android:maxLines="1"
                 android:text=""
-                android:ellipsize="end"
-                android:drawableStart="@drawable/ic_rate_interest_icon"
-                android:gravity="center|start"
-                app:layout_constraintTop_toBottomOf="@+id/txtDuration"
-                app:layout_constraintStart_toEndOf="@+id/txtLoanAmount"
-                app:layout_constraintEnd_toStartOf="@+id/buttonLoanStatus"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:textColor="@color/colorTextBlackLight"
+                android:textSize="@dimen/_10sdp"
+                app:layout_constraintEnd_toEndOf="@+id/txtDuration"
 
-                />
+                app:layout_constraintStart_toStartOf="@+id/txtDuration"
+                app:layout_constraintTop_toBottomOf="@+id/txtDuration" />
+
+
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
