--- a/app/src/main/res/layout/layout_loan_list.xml
+++ b/app/src/main/res/layout/layout_loan_list.xml
@@ -8,126 +8,145 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="@dimen/_4sdp">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <com.facebook.shimmer.ShimmerFrameLayout
-                android:id="@+id/smBanner"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/yellow_button"
-                android:padding="@dimen/_5sdp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="@+id/txtRate"
-                app:layout_constraintTop_toBottomOf="@+id/txtRate"
-                app:layout_constraintVertical_bias="1.0" >
-                <com.app.l_pesa.common.CommonTextRegular
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <com.facebook.shimmer.ShimmerFrameLayout
+                    android:id="@+id/smBanner"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:text="$10 Loan approval in 5 sec."
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:background="@drawable/yellow_button"
+                    android:padding="@dimen/_5sdp"
                     android:rotation="0"
-                    android:textStyle="bold"
-                    android:textColor="#3E0000"
-                    android:id="@+id/tvBanner"/>
-            </com.facebook.shimmer.ShimmerFrameLayout>
-            <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/txtLoanAmount"
-                android:layout_width="@dimen/_45sdp"
-                android:layout_height="@dimen/_45sdp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/bg_aquamarine_circle"
-                android:gravity="center"
-                android:textColor="@color/colorWhite"
-                android:textSize="@dimen/_10sdp"
-                app:layout_constraintEnd_toStartOf="@+id/txtRequiredScore"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintStart_toStartOf="@+id/txtRate"
+                    app:layout_constraintTop_toBottomOf="@+id/txtRate"
+                    app:layout_constraintVertical_bias="1.0">
 
-            <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/txtRequiredScore"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/_20sdp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:ellipsize="end"
-                android:gravity="start|center"
-                android:maxLines="1"
-                android:paddingStart="@dimen/_4sdp"
-                android:paddingEnd="@dimen/_2sdp"
-                android:text=""
-                android:textColor="@color/colorTextBlack"
-                android:textSize="@dimen/_12sdp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/txtLoanAmount"
-                app:layout_constraintTop_toTopOf="@+id/txtLoanAmount" />
+                    <com.app.l_pesa.common.CommonTextRegular
+                        android:id="@+id/tvBanner"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
 
-            <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/txtDuration"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/_20sdp"
-                android:layout_marginTop="2dp"
-                android:drawableStart="@drawable/ic_request_date"
-                android:drawablePadding="@dimen/_2sdp"
-                android:ellipsize="end"
-                android:gravity="center|start"
-                android:maxLines="1"
-                android:paddingStart="@dimen/_4sdp"
-                android:paddingEnd="@dimen/_1sdp"
-                android:text=""
-                android:textColor="@color/colorTextBlackLight"
-                android:textSize="@dimen/_10sdp"
+                        android:textColor="#3E0000"
+                        android:textStyle="bold"
+                        tools:text="$10 Loan approval in 5 sec." />
+                </com.facebook.shimmer.ShimmerFrameLayout>
+                <com.app.l_pesa.common.CommonTextRegular
+                    android:id="@+id/txtLoanAmount"
+                    android:layout_width="@dimen/_45sdp"
+                    android:layout_height="@dimen/_45sdp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:background="@drawable/bg_aquamarine_circle"
+                    android:gravity="center"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="@dimen/_10sdp"
+                    app:layout_constraintEnd_toStartOf="@+id/txtRequiredScore"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                app:layout_constraintEnd_toStartOf="@+id/buttonLoanStatus"
-                app:layout_constraintStart_toStartOf="@+id/txtRequiredScore"
-                app:layout_constraintTop_toTopOf="@+id/buttonLoanStatus" />
+                <com.app.l_pesa.common.CommonTextRegular
+                    android:id="@+id/txtRequiredScore"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/_20sdp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:ellipsize="end"
+                    android:gravity="start|center"
+                    android:maxLines="1"
+                    android:paddingStart="@dimen/_4sdp"
+                    android:paddingEnd="@dimen/_2sdp"
+                    android:text=""
+                    android:textColor="@color/colorTextBlack"
+                    android:textSize="@dimen/_12sdp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/txtLoanAmount"
+                    app:layout_constraintTop_toTopOf="@+id/txtLoanAmount" />
 
-            <com.app.l_pesa.common.CustomButtonRegular
-                android:id="@+id/buttonLoanStatus"
-                android:layout_width="@dimen/_95sdp"
-                android:layout_height="@dimen/_27sdp"
-                android:layout_marginStart="@dimen/_2sdp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:drawablePadding="@dimen/_3sdp"
-                android:textAllCaps="false"
-                android:textSize="@dimen/_9sdp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/txtDuration"
+                <com.app.l_pesa.common.CommonTextRegular
+                    android:id="@+id/txtDuration"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/_20sdp"
+                    android:layout_marginTop="2dp"
+                    android:drawableStart="@drawable/ic_request_date"
+                    android:drawablePadding="@dimen/_2sdp"
+                    android:ellipsize="end"
+                    android:gravity="center|start"
+                    android:maxLines="1"
+                    android:paddingStart="@dimen/_4sdp"
+                    android:paddingEnd="@dimen/_1sdp"
+                    android:text=""
+                    android:textColor="@color/colorTextBlackLight"
+                    android:textSize="@dimen/_10sdp"
 
-                app:layout_constraintTop_toBottomOf="@+id/txtRequiredScore" />
+                    app:layout_constraintEnd_toStartOf="@+id/buttonLoanStatus"
+                    app:layout_constraintStart_toStartOf="@+id/txtRequiredScore"
+                    app:layout_constraintTop_toTopOf="@+id/buttonLoanStatus" />
 
-            <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/txtRate"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/_20sdp"
-                android:layout_marginTop="2dp"
-                android:drawableStart="@drawable/ic_rate_interest_icon"
-                android:drawablePadding="@dimen/_2sdp"
-                android:ellipsize="end"
-                android:gravity="center|start"
-                android:maxLines="1"
-                android:paddingStart="@dimen/_4sdp"
-                android:paddingEnd="@dimen/_2sdp"
-                android:text=""
-                android:textColor="@color/colorTextBlackLight"
-                android:textSize="@dimen/_10sdp"
-                app:layout_constraintEnd_toEndOf="@+id/txtDuration"
+                <com.app.l_pesa.common.CustomButtonRegular
+                    android:id="@+id/buttonLoanStatus"
+                    android:layout_width="@dimen/_95sdp"
+                    android:layout_height="@dimen/_27sdp"
+                    android:layout_marginStart="@dimen/_2sdp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:drawablePadding="@dimen/_3sdp"
+                    android:textAllCaps="false"
+                    android:textSize="@dimen/_9sdp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/txtDuration"
 
-                app:layout_constraintStart_toStartOf="@+id/txtDuration"
-                app:layout_constraintTop_toBottomOf="@+id/txtDuration" />
+                    app:layout_constraintTop_toBottomOf="@+id/txtRequiredScore" />
+
+                <com.app.l_pesa.common.CommonTextRegular
+                    android:id="@+id/txtRate"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/_20sdp"
+                    android:layout_marginTop="2dp"
+                    android:drawableStart="@drawable/ic_rate_interest_icon"
+                    android:drawablePadding="@dimen/_2sdp"
+                    android:ellipsize="end"
+                    android:gravity="center|start"
+                    android:maxLines="1"
+                    android:paddingStart="@dimen/_4sdp"
+                    android:paddingEnd="@dimen/_2sdp"
+                    android:text=""
+                    android:textColor="@color/colorTextBlackLight"
+                    android:textSize="@dimen/_10sdp"
+                    app:layout_constraintEnd_toEndOf="@+id/txtDuration"
+
+                    app:layout_constraintStart_toStartOf="@+id/txtDuration"
+                    app:layout_constraintTop_toBottomOf="@+id/txtDuration" />
 
 
 
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <com.haozhang.lib.SlantedTextView
+            android:id="@+id/stApproval"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:gravity="center"
+            app:slantedBackgroundColor="#C4FF9800"
+            app:slantedLength="40dp"
+            app:slantedMode="left"
+            app:slantedText="5 Sec. approval"
+            app:slantedTextColor="#320300"
+            app:slantedTextSize="@dimen/_10sdp"
+            />
+    </FrameLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
