--- a/app/src/main/res/layout/add_statement_bottomsheet_layout.xml
+++ b/app/src/main/res/layout/add_statement_bottomsheet_layout.xml
@@ -135,6 +135,7 @@
                 android:id="@+id/ilIdNumber"
                 style="@style/customInputLayoutStyle"
                 android:layout_width="0dp"
+                android:visibility="gone"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
@@ -158,23 +159,58 @@
                     android:textSize="@dimen/_12sdp" />
             </com.app.l_pesa.common.CommonInputLayout>
 
+            <LinearLayout
+                android:id="@+id/llDate"
+                android:background="@drawable/bg_statement_date_shape"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:orientation="vertical"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/imageView11"
+                app:layout_constraintTop_toBottomOf="@+id/ilDocNo">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvFrom"
+                    android:textSize="@dimen/_12sdp"
+                    android:layout_width="match_parent"
+                    android:padding="@dimen/_5sdp"
+                    android:fontFamily="@font/montserrat"
+                    android:layout_height="wrap_content"
+                    android:hint="Select Start Date " />
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/_1sdp"
+    android:background="#c2c2c2"/>
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvTo"
+                    android:fontFamily="@font/montserrat"
+                    android:textSize="@dimen/_12sdp"
+                    android:layout_width="match_parent"
+                    android:padding="@dimen/_5sdp"
+                    android:layout_height="wrap_content"
+                    android:hint="Select End Date " />
+            </LinearLayout>
+
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/textView10"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginTop="16dp"
                 android:drawablePadding="@dimen/_2sdp"
                 android:fontFamily="@font/montserrat"
                 android:lineSpacingExtra="@dimen/_1sdp"
                 android:text="Please add document number and statement period of statement file."
                 android:textColor="@color/colorGreyDeep"
                 android:textSize="@dimen/_10sdp"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/ilDocNo"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/imageView11"
-                app:layout_constraintTop_toBottomOf="@+id/ilIdNumber"
+                app:layout_constraintTop_toBottomOf="@+id/llDate"
                 app:layout_constraintVertical_chainStyle="spread_inside" />
 
             <com.app.l_pesa.common.CommonTextRegular
